fixed modal message color in dark mode, changed row sizing in large screens

--- a/src/assets/styles/overrides/_dark.scss
+++ b/src/assets/styles/overrides/_dark.scss
@@ -217,6 +217,10 @@
 		.modal-header {
 			background: $dark-grey-overlay !important;
 		}
+
+		code {
+			color: $color-white !important;
+		}
 	}
 
 	.auth-form-container {
